--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
 
+    <!--jQuery CDN-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 
     <title>GifTastic App</title>
 </head>
@@ -20,7 +23,7 @@
             <button type="button" class="btn btn-info float-left">This is where my button will go</button>
         </div>
         </br>
-        </br>   
+        </br>
 
         <form>
             <div class="form-group col">
@@ -28,12 +31,13 @@
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="let's do this!">
             </div>
         </form>
-        
+
         <div class="col" id="gifs">
-            
+
         </div>
     </div>
 
+    <script type="text/javascript" src="assets/app.js"></script>
 </body>
 
 </html>
