started adding jQuery

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 
-    <title>GifTastic App</title>
+    <title>Game Gif Maker!</title>
 </head>
 
 <body>
@@ -27,8 +27,9 @@
 
         <form>
             <div class="form-group col">
-                <label for="exampleFormControlInput1">Make a Thing!</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="let's do this!">
+                <label for="exampleFormControlInput1">Add A Game!</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="let's do this!">
+                <button type="button" id="gif-button" class="btn btn-info">Submit</button>
             </div>
         </form>
 
