appending buttons to the page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <div id="buttons" class="col">
-            <button type="button" class="btn btn-info float-left">This is where my button will go</button>
+            <button type="button" data-search="PUBG" class="btn btn-info float-left">PUBG</button>
         </div>
         </br>
         </br>
