--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </br>
 
         <form>
-            <div class="form-group col">
+            <div class="form-group col-4 float-right">
                 <label for="exampleFormControlInput1">Add A Game!</label>
                 <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="let's do this!">
                 <button type="button" id="gif-button" class="btn btn-info">Submit</button>
