fixed but with button being appended to the page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <form>
             <div class="form-group col-4 float-right">
                 <label for="exampleFormControlInput1">Add A Game!</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="let's do this!">
+                <input type="text reset" class="form-control" id="exampleFormControlInput1" placeholder="let's do this!">
                 <button type="button" id="gif-button" class="btn btn-info">Submit</button>
             </div>
         </form>
