fixed submit button

--- a/index.html
+++ b/index.html
@@ -20,21 +20,19 @@
 <body>
     <div class="container">
         <div id="buttons" class="col">
-    
-    
         </div>
         </br>
         </br>
 
         <form>
-            <div class="form-group col-4 float-right">
+            <div class="form-group lg-col-4 float-right">
                 <label for="exampleFormControlInput1">Add A Game!</label>
                 <input type="text reset" class="form-control" id="exampleFormControlInput1" placeholder="let's do this!">
                 <button type="button" id="gif-button" class="btn btn-info">Submit</button>
             </div>
         </form>
 
-        <div class="col" id="gifs">
+        <div class="lg-col-8" id="gifs">
 
         </div>
     </div>
