--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
 <body>
     <div class="container">
         <div id="buttons" class="col">
+            <!--margin between the buttons-->
+            <style>
+                .doIt {
+                    margin: 5px;
+                }
+            </style>
         </div>
         </br>
         </br>
-
+        <!--form for user input-->
         <form>
             <div class="form-group lg-col-4 float-right">
                 <label for="exampleFormControlInput1">Add A Game!</label>
@@ -36,7 +42,7 @@
 
         </div>
     </div>
-
+    <!--external javascript link to my code-->
     <script type="text/javascript" src="assets/app.js"></script>
 </body>
 
