--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 
-    <title>Game Gif Maker!</title>
+    <title>Game Gif Gitter!!</title>
 </head>
 
 <body>
